# llm-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1c2e3f40516_request_log_upstream_io.py  a7c8e9f0b162_settings.py  b2d3f4a51627_provider_model_prices.py  bfb1660a6300_initial_schema.py  c3e4a5b62738_request_id_and_audit_log.py  d4f5b6c73849_users.py  e5a6c7d84960_request_log_provider_routing.py  f6b7d8e95a71_deployment_dialect.py
app/: config.py  main.py
app/api/admin/: aliases.py  credentials.py  deployments.py  health.py  keys.py  logs.py  playground.py  providers.py  settings.py  users.py
app/api/v1/: _common.py  audio.py  chat.py  completions.py  embeddings.py  images.py  models.py  responses.py
app/core/: auth.py  budget.py  cache.py  circuit_breaker.py  config_store.py  cost.py  executor.py  fx.py  load_balancer.py  logging_service.py  metrics.py  middleware.py  rate_limiter.py  request_context.py  router.py  security.py
app/db/: models.py  session.py
app/providers/: anthropic.py  base.py  gemini.py  openai_compat.py  registry.py  vertex.py
app/schemas/: admin.py  openai.py
app/transform/: multimodal.py  params.py  reasoning.py
app/web/static/: app.css  app.js  index.html
deploy/k8s/: README.md  deployment.yaml  migrate-job.yaml  secret.example.yaml
docs/: ARCHITECTURE.md  USAGE.md
docs/images/: README.md
tests/: conftest.py  test_e2e.py  test_units.py
