[project]
name = "llm-gateway"
version = "0.1.0"
description = "Lightweight self-hosted LLM proxy gateway (OpenAI-compatible)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx[socks]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]
license = { text = "MIT" }

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI dependency injection idiom (Depends()/Query()/Header() in defaults).
ignore = ["B008"]
# E402: tests set env vars before importing the app on purpose.
per-file-ignores = { "tests/*" = ["E402"], "alembic/*" = ["E402", "F401"] }
