[project]
name = "llm-gateway"
version = "0.1.0"
description = "Lightweight self-hosted LLM proxy gateway (OpenAI-compatible)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "httpx[socks]>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "cryptography>=49.0.0",
    "prometheus-client>=0.25.0",
    "python-multipart>=0.0.32",
]
license = { text = "MIT" }

[project.optional-dependencies]
postgres = ["asyncpg>=0.31.0"]
redis = ["redis>=8.0.1"]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "httpx>=0.28.1",
    "ruff>=0.15.19",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI dependency injection idiom (Depends()/Query()/Header() in defaults).
ignore = ["B008"]
# E402: tests set env vars before importing the app on purpose.
per-file-ignores = { "tests/*" = ["E402"], "alembic/*" = ["E402", "F401"] }
